<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_crazy_tip_calc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ebookfrenzy.crazytipcalc.CrazyTipCalc">

    <TextView
        android:text="@string/bill_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="11dp"
        android:id="@+id/billTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:text="@string/bill_edit_text"
        android:ems="5"
        android:layout_marginStart="16dp"
        android:id="@+id/billEditText"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/billTextView" />

    <TextView
        android:text="@string/tip_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/billTextView"
        android:layout_toEndOf="@+id/billEditText"
        android:layout_marginStart="30dp"
        android:id="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_edit_view"
        android:ems="4"
        android:id="@+id/tipEditText"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView3"
        android:inputType="numberDecimal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:id="@+id/finalBillEditText"
        android:inputType="numberDecimal"
        android:layout_below="@+id/finalBillTextView"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:text="@string/final_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finalBillTextView"
        android:layout_below="@+id/tipEditText"
        android:layout_alignStart="@+id/finalBillEditText"
        android:layout_marginTop="26dp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changeTipSeekBar"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/changeTipTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/changeTipTextView"
        android:progress="15" />

    <TextView
        android:text="@string/tip_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changeTipTextView"
        android:layout_below="@+id/finalBillEditText"
        android:layout_toEndOf="@+id/billTextView"
        android:layout_marginTop="29dp" />

</RelativeLayout>
